# tstrippy

./: .gitignore  .readthedocs.yml  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  analyze_dependencies.py  build.sh  dev_environment.yml  env_meson.yml  environment.yml  environment_gp.yml  environment_safe.yml  file-structure.md  integrator.mod  list_source_files.sh  meson.build  meson_options.txt  plan.md  plan_bfe.md  pyproject.toml  requirements.txt  setup.py  source_files.txt  temp.f90  test.py  xx_setup.py
data/: 2023-03-28-merged.fits
development/: .nfs000000000248e71d00000002  aa.py  ab.py  env_ffmpeg.yml  exc.py  hello.f90  some_integration_steps.html  special_functions.f90  temp.f90  temp.py  temp2.f90  test.py
docs/: requirements.txt
docs/source/: bar.ipynb  bar_stream_example.ipynb  baumgardt_catalog.ipynb  bfe_bessel_functions.ipynb  composite_basis_potential.ipynb  conf.py  galactic_orbits.ipynb  index.rst  installation.rst  intro_notebook.ipynb  legendre_BFE_orbit_convergence.ipynb  reverse_integrability.ipynb  reverse_integrability_stream.ipynb  reverse_integrability_vanilla.ipynb  stream_generation.ipynb
docs/source/api/: Parsers.rst  dataParsers.rst  index.rst
docs/source/examples/: gettingBaumgardtMWGCs.ipynb  index.rst
tests/: ForestRuth.ipynb  bar_sensitivity_integration_timestep_and_time.py  parse_potentials.py  probe_integrator_accelerations.ipynb  scrap.ipynb  test_baumgardtMWGCs.py  test_imports.py  test_loading_parameters.py  test_package_structure.py  test_potentials.py  test_reverse_integrability.py  test_vanilla.py  testonestarparticle.ipynb
tstrippy/: __init__.py  _math.py  bfe.py  integrator.py  test.f90  test.mod  trash.py
tstrippy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tstrippy/Parsers/: __init__.py  baumgardtMWGCs.py  potential_parameters.py
tstrippy/code/: __init__.py  bfe.py  ergodic.py  orbits.py  sampling.py  stream_dynamics.py
tstrippy/data/: 2023-03-28-merged.fits  MWrefframe001.yaml  MWrefframeFerrone2023.yaml  pouliasis2017pii.yaml  unit_basis.yaml
tstrippy/dataParser/: baumgardtMWGCs.py
tstrippy/dataParsers/: __init__.py  baumgardtMWGCs.py  potential_parameters.py
tstrippy/integrate/: integrator.f90  integrator.mod
tstrippy/io/: __init__.py  baumgardt_gcs.py  potential_parameters.py  referenceFrames.py
tstrippy/lib/: __init__.py
tstrippy/src/: constants.f90  galacticbar.f90  hostperturber.f90  integrator.f90  mathutils.f90  perturbers.f90  potentials.f90
