[build-system]
requires = ["meson-python>=0.13.0", "numpy>=1.20.0"]
build-backend = "mesonpy"

[project]
name = "tstrippy"
version = "0.0.1"
description = "TIDAL-STRIPPING-PYTHON: Tidal stripping simulations"
readme = "README.md"
authors = [
    {name = "Salvatore Ferrone", email = "salvatore.ferrone.1996@gmail.com"}
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20.0",
    "astropy>=4.0",
    "pyyaml>=5.1",
]