[build-system]
requires = [
    "meson-python>=0.15.0",  # Updated to version that works with Python 3.13
    "numpy>=1.20.0",
    "meson>=1.2.3"  # Explicitly require Meson 1.2.3+ for Python 3.12+
]
build-backend = "mesonpy"

[tool.meson-python.args]
setup = ['-Dis_pip_build=true']

[project]
name = "tstrippy"
version = "0.0.1"
description = "TIDAL-STRIPPING-PYTHON: Tidal stripping simulations"
readme = "README.md"
authors = [
    {name = "Salvatore Ferrone", email = "salvatore.ferrone.1996@gmail.com"}
]
requires-python = ">=3.9,<3.12"


dependencies = [
    "numpy>=1.20.0",
    "astropy>=4.0",
    "pyyaml>=5.1",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Fortran",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Intended Audience :: Science/Research",
]

[project.urls]
"Repository" = "https://github.com/salvatore-ferrone/tstrippy"
"Documentation" = "https://tstrippy.readthedocs.io"
"Issues" = "https://github.com/salvatore-ferrone/tstrippy/issues"